# OpenSessionScribe

./: .dockerignore  Brewfile  Dockerfile  Dockerfile.simple  LICENSE  PLAN-1.md  PLAN-2.md  PROJECT_STATUS.md  README.md  TODO-pytorch-torchcodec-migration.md  install-deps.sh  pyproject.toml  requirements.txt
cli/: __init__.py  main.py
docs/: API.md  CONFIGURATION.md
examples/: basic-usage.sh
opensessionscribe/: __init__.py  config.py  hardware.py  pipeline.py
opensessionscribe/asr/: __init__.py  whisperx_adapter.py
opensessionscribe/diarize/: __init__.py  pyannote_adapter.py
opensessionscribe/ingest/: __init__.py  downloader.py
opensessionscribe/schemas/: __init__.py  package.py
opensessionscribe/slides/: __init__.py  detector.py  ocr_processor.py  processor.py  vlm_describer.py
opensessionscribe/utils/: ffmpeg.py  hashing.py
pipeline_test/: Me at the zoo.info.json  package.json  transcript_raw.json
pipeline_test_with_slides/: Me at the zoo.info.json  package.json  slides_raw.json
scripts/: check-deps.py  check-system.py  docker-setup.sh  quickstart.sh  setup-models.sh  setup.sh
slides_output/: slides.json
test_audio/test_audio/: combined_output.json  diarization.json
tests/: __init__.py  test_pipeline.py
